<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Flag1" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/Flag2" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/Flag3" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/Flag4" />

    <Switch
        android:id="@+id/switch6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/Flag6" />

    <Switch
        android:id="@+id/switch7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/Flag7" />

    <Switch
        android:id="@+id/switch8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/Flag8" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/Flag5" />

</RelativeLayout>